# bookin-first

./: Cargo.toml  README.md  TODO.md  book.json  courses.json  index.html  slots.json
book-lambda/: Cargo.toml
book-lambda/src/: main.rs
booking-first-lib/: Cargo.toml
booking-first-lib/src/: booking_service.rs  cookies.rs  fitness_service.rs  lib.rs  login_service.rs  testutil.rs  ui.rs
booking-first-lib/src/dto/: error.rs  mod.rs  request.rs  response.rs  slots.rs
booking-first-lib/src/http_client/: mod.rs  reqwest_client.rs
booking-first-lib/src/login/: mod.rs  parse.rs  service.rs
booking-first-lib/src/wasm/: http_client.rs
cli-main/: Cargo.toml
cli-main/src/: cli.rs  main.rs
courses-lambda/: Cargo.toml
courses-lambda/src/: main.rs
example-data/powershell-scripts/: book-course.ps1  linkedin.ps1  list-courses.ps1
js/: app.js  course-action.js  course-mapper.js  display.js  index.css  login.js
lambda-common/: Cargo.toml
lambda-common/src/: lib.rs
login-lambda/: Cargo.toml
login-lambda/src/: main.rs
powershell-scripts/: delete-course.ps1  list-slots.ps1  login-egym.ps1
shared/: Cargo.toml
shared/src/dto/: course.rs  login_data.rs  request.rs  response.rs  slots.rs  token.rs
slots-lambda/: Cargo.toml
slots-lambda/src/: main.rs
src/: args.rs  booking_service.rs  cli.rs  cookies.rs  fitness_service.rs  http_client.rs  lib.rs  login_service.rs  main.rs  request.rs  response.rs  testutil.rs  ui.rs
src/dto/: course.rs  mod.rs  request.rs  response.rs  slots.rs
src/wasm/: booking_service.rs  http_client.rs  mod.rs
wasm-client/: Cargo.toml
wasm-client/pkg/: README.md  package.json  wasm_client.d.ts  wasm_client.js  wasm_client_bg.wasm  wasm_client_bg.wasm.d.ts
wasm-client/src/: fetch.rs  lib.rs
