[package]
name = "fitness-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.0"
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
js-sys = "0.3.69"
reqwest = { version = "0.11.26", features = ["cookies"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt", "macros"] }
trait-variant = "0.1.1"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Window"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
fakeit = "1.2.0"
