[package]
name = "booking-first-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
base64 = "0.22.0"
chrono = { version = "0.4.35", features = ["serde"] }
reqwest = { version = "0.11.26", default-features = false, features = ["cookies"] }
serde = { version = "1.0.197", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt", "macros"] }
trait-variant = "0.1.1"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Window", "console", "Request", "RequestInit", "FormData", "RequestMode", "Headers"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
fakeit = "1.2.0"
