[package]
name = "booking-first-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
shared = { path = "../shared" }
base64 = "0.22.0"
chrono = { version = "0.4.35", features = ["serde"] }
reqwest = { version = "0.11.26", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt", "macros"] }
trait-variant = "0.1.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
fakeit = "1.2.0"
