[package]
name = "cli-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
booking-first-lib = { path = "../booking-first-lib" }
clap = { version = "4.5.1", features = ["derive"] }
reqwest = { version = "0.11.26", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.36.0", features = ["rt", "macros"] }
