[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
wasm-bindgen = "0.2.92"
#serde-wasm-bindgen = "0.6.5"
#wasm-bindgen-futures = "0.4.42"
#web-sys = { version = "0.3.69", features = ["Window", "console", "Request", "RequestInit", "FormData", "RequestMode", "Headers"] }
