[package]
name = "wasm-client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../shared" }
serde = "1.0.203"
serde_json = "1.0.117"
wasm-bindgen = { version = "0.2.92", features = ["serde"] }
wasm-bindgen-futures = { version = "0.4.42", features = ["futures-core"] }
web-sys = { version = "0.3.69", features = ["Window", "Response", "RequestInit", "RequestMode"] }
wasm-bindgen-test = "0.3.42"
